fix: adds spacing to hero

--- a/web/src/components/Common/Hero/Hero.module.scss
+++ b/web/src/components/Common/Hero/Hero.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  // margin-top: 30px;
+  margin-top: 42px;
 }
 
 .Overlay {
